fix header color on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3249,7 +3249,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.curre
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
-  background-color: #21c2f8;
+  background-color: #063865;
 }
 
 header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a {
@@ -3395,7 +3395,7 @@ header.site-header .arrow-down-section .arrow-down i:before {
     top: 0;
     left: 15px;
     min-height: 60px;
-    background: #21c2f8;
+    background: #063865;
     z-index: 99999999999999;
   }
   header.site-header .site-navigation-bar .navigation-bar {
